--- a/styles.css
+++ b/styles.css
@@ -2,5 +2,10 @@ body{
     background-color:burlywood;
 }
 li{
-    color:cornflowerblue;
-}
+    color:purple;}
+
+code{font-family: Consolas,"courier new";
+    color: crimson;
+    background-color: #f1f1f1;
+    padding: 2px;
+    font-size: 105%;}
